vites skipped and other data now visible in the room page correctly

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -15,4 +15,9 @@ body {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
 }
+/* .center {
+  display: flex;
+  align-items: center;
+} */
